[package]
name = "hctr2"
version = "0.1.0"
authors = ["Eric Lagergren"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ericlagergren/hctr2-rs"
keywords = [ "hctr2" ]
categories = [ "cryptography", "no-std" ]

[dependencies]
cipher = "0.4"
generic-array = "0.14"
polyval = { version = "0.6", default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
aes = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
