[package]
name = "hctr2"
version = "0.1.0"
description = """
An implementation of the length-preserving encryption HCTR2 algorithm.
"""
authors = ["Eric Lagergren"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ericlagergren/hctr2-rs"
keywords = [ "hctr2" ]
categories = [ "cryptography", "no-std" ]

[dependencies]
byteorder = { version = "1.4", default-features = false }
cipher = "0.4"
generic-array = "0.14"
polyval = { version = "0.6", default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
aes = "0.8"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
